# batchsmith

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  META_PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/batchsmith/: main.py  pdfmd.py
src/batchsmith/providers/: __init__.py  google.py  openai.py
tests/: conftest.py  test_integration.py  test_main.py  test_pdfmd.py
tests/examples/idioms/: batch_data.json  config.json  prompts.json
tests/examples/jokes/: batch_data.json  config.json  output.json  prompts.json
