[project]
name = "batchsmith"
version = "0.1.0"
description = "BatchSmith is a modular CLI tool for structured batch output generation using LangChain and Google Generative AI."
authors = [
    {name = "Po-wei Huang",email = "abc1199281@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-google-genai>=0.1.4",
]

[project.scripts]
batchsmith = "batchsmith.main:main"


[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
python-dotenv = "^0.21.0"
pre-commit = "^3.4.0"

[tool.poetry]
packages = [{include = "batchsmith", from = "src"}]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
